--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ html {
   
   nav {
     /* background-color: #111; */
-    background-color: #69be94;
-    /* background-color: #7CFC00; */
+    /* background-color: #69be94; */
+    background-color: #7CFC00;
     color: white;
     padding: 20px 50px;
   }
