--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
     background-color: transparent;
   }
 
-  .sliderPrice {
+  .sliderPPrice {
     display: inline-block;
     background-color: rgb(7, 14, 119); /* Set the background color */
     color: #ffffff; /* Set the text color */
