--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ html {
 
   .sliderPPrice {
     position: absolute;
-    /* display: inline-block; */
+    display: inline-block;
     background-color: rgb(7, 14, 119); /* Set the background color */
     color: #ffffff; /* Set the text color */
     padding: 10px; /* Adjust padding as needed */
-    border-radius: 500px; /* Create a rounded shape */
+    border-radius: 50px; /* Create a rounded shape */
     text-align: center; /* Center the text */
 }
   
