--- a/style.css
+++ b/style.css
@@ -125,11 +125,12 @@ html {
     position: absolute;
     top: 10%;
     right: 10%;
-    font-size: 60px;
+    font-size: 11px;
     font-weight: 900;
     text-align: center;
-    color: rgb(44, 182, 32);
+    color: rgb(255, 255, 255);
     z-index: 1;
+    margin-right: 20px;
   }
   
   .sliderPrice {
