--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ html {
   }
 
   .sliderPPrice {
-    position: absolute;
+    /* position: absolute; */
     display: inline-block;
     background-color: rgb(7, 14, 119); /* Set the background color */
     color: #ffffff; /* Set the text color */
